<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.Tours.UpdateToursFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_Tour_city"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_location_city_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_city"
                android:inputType="text"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/update_Tour_Country"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_below="@id/update_Tour_city"
                android:layout_marginTop="20dp"
                android:background="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_place_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_country"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/update_tour_Duration"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_below="@id/update_Tour_Country"
                android:layout_marginTop="20dp"
                android:background="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_access_time_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_duration"
                android:inputType="number"
                android:padding="20dp"

                android:textColor="@color/black"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/update_tour_type"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_below="@id/update_tour_Duration"
                android:layout_marginTop="20dp"
                android:background="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_format_list_numbered_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_Type"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/updatebrowseImageLibrary_tour"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_tour_type"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_image_search_24"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/button_browse"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_tours_button"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/updatebrowseImageLibrary_tour"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:text="@string/button_confirm"
                android:textSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_tours_button"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_tours_button"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/red1"
                android:text="@string/button_cancel"
                android:textSize="20dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>