<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.iee.trvlapp.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_offices"
        android:name="com.iee.trvlapp.ui.Offices.OfficesFragment"
        android:label="@string/menu_offices"
        tools:layout="@layout/fragment_offices" >
        <action
            android:id="@+id/action_nav_offices_to_addOfficesFragment"
            app:destination="@id/addOfficesFragment" />
        <action
            android:id="@+id/action_nav_offices_to_updateOfficesFragment"
            app:destination="@id/updateOfficesFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_tours"
        android:name="com.iee.trvlapp.ui.Tours.ToursFragment"
        android:label="@string/menu_tours"
        tools:layout="@layout/fragment_tours" >
        <action
            android:id="@+id/action_nav_tours_to_addToursFragment"
            app:destination="@id/addToursFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_packages"
        android:name="com.iee.trvlapp.ui.Packages.PackagesFragment"
        android:label="@string/menu_packages"
        tools:layout="@layout/fragment_packages" >
        <action
            android:id="@+id/action_nav_packages_to_addPackagesFragment"
            app:destination="@id/addPackagesFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_costumers"
        android:name="com.iee.trvlapp.ui.Costumers.CostumersFragment"
        android:label="@string/menu_costumers"
        tools:layout="@layout/fragment_costumers" >
        <action
            android:id="@+id/action_nav_costumers_to_addCostumersFragment"
            app:destination="@id/addCostumersFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCostumersFragment"
        android:name="com.iee.trvlapp.ui.Costumers.AddCostumersFragment"
        android:label="fragment_add_costumers"
        tools:layout="@layout/fragment_add_costumers" >
        <action
            android:id="@+id/action_addCostumersFragment_to_nav_costumers"
            app:destination="@id/nav_costumers" />
    </fragment>
    <fragment
        android:id="@+id/addPackagesFragment"
        android:name="com.iee.trvlapp.ui.Packages.AddPackagesFragment"
        android:label="fragment_add_packages"
        tools:layout="@layout/fragment_add_packages" >
        <action
            android:id="@+id/action_addPackagesFragment_to_nav_packages"
            app:destination="@id/nav_packages" />
    </fragment>
    <fragment
        android:id="@+id/addOfficesFragment"
        android:name="com.iee.trvlapp.ui.Offices.AddOfficesFragment"
        android:label="fragment_add_offices"
        tools:layout="@layout/fragment_add_offices" >
        <action
            android:id="@+id/action_addOfficesFragment_to_nav_offices"
            app:destination="@id/nav_offices" />
    </fragment>
    <fragment
        android:id="@+id/addToursFragment"
        android:name="com.iee.trvlapp.ui.Tours.AddToursFragment"
        android:label="fragment_add_tours"
        tools:layout="@layout/fragment_add_tours" >
        <action
            android:id="@+id/action_addToursFragment_to_nav_tours"
            app:destination="@id/nav_tours" />
    </fragment>
    <fragment
        android:id="@+id/updateOfficesFragment"
        android:name="com.iee.trvlapp.ui.Offices.UpdateOfficesFragment"
        android:label="fragment_update_offices"
        tools:layout="@layout/fragment_update_offices" >
        <action
            android:id="@+id/action_updateOfficesFragment_to_nav_offices"
            app:destination="@id/nav_offices" />
    </fragment>
</navigation>