<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@drawable/base"
    android:orientation="vertical"
    tools:context=".ui.Offices.UpdateOfficesFragment"
    android:backgroundTint="@color/blue">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/update_Office_name"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_baseline_store_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_name"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/update_office_address"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_below="@id/update_Office_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_baseline_edit_location_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_address"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/updatebrowseImageLibrary"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_office_address"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_image_search_24"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/button_browse"
                android:textAllCaps="false"
                android:textColor="@color/textInPurple"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_office_button"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/updatebrowseImageLibrary"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:text="@string/button_confirm"
                android:textColor="@color/textInPurple"
                android:textSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_update_office_button"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_office_button"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/cancelBtn"
                android:text="@string/button_cancel"
                android:textSize="20dp" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>