<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="30dp"
    android:background="@drawable/base"
    android:orientation="vertical"
    tools:context=".ui.Hotels.UpdateHotelsFragment"
    android:backgroundTint="@color/blue">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/update_Hotel_name"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_baseline_hotel_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_name"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/update_Hotel_address"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_below="@id/update_Hotel_name"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_baseline_edit_location_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_address"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/update_Hotel_stars"
                android:layout_width="333dp"
                android:layout_height="60dp"
                android:layout_below="@id/update_Hotel_address"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_baseline_stars_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:hint="@string/input_stars"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/update_hotel_tid"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/update_Hotel_stars"
                android:layout_marginTop="11dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/red_hat_text_regular"
                android:inputType="number"
                android:padding="20dp"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp"

                >

                <AutoCompleteTextView
                    android:id="@+id/update_auto_complete_Htid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/orange"
                    android:hint="@string/input_selectTour"
                    android:inputType="none"

                    />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/updatebrowseImageLibrary_hotel"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_hotel_tid"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/orange"
                android:drawableLeft="@drawable/ic_baseline_image_search_24"
                android:fontFamily="@font/red_hat_text_regular"
                android:text="@string/button_browse"
                android:textAllCaps="false"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:textSize="20dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/update_Hotel_button"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/updatebrowseImageLibrary_hotel"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:textColor="@color/textInPurple"
                android:textColorHint="@color/textInPurple"
                android:text="@string/button_confirm"
                android:textSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_update_Hotel_button"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/update_Hotel_button"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/cancelBtn"
                android:text="@string/button_cancel"
                android:textSize="20dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>