<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SupportingClasses.HelpFragment"
    android:background="@color/blue">


    <TextView
        android:id="@+id/gestures_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/help_title"
        android:textAlignment="center"
        android:textColor="@color/red1"
        android:textSize="35dp"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/help_click_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gestures_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="77dp">

        <ImageView
            android:id="@+id/click_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/swipe_c"></ImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/help_click"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="15dp"></TextView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/help_swipeL_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_click_linear"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="257dp">

        <ImageView
            android:id="@+id/swipLImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/swipe_l"></ImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/help_swipeL"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="15dp"></TextView>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/help_swipeR_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_swipeL_linear"
        tools:ignore="MissingConstraints"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="437dp">

        <ImageView
            android:id="@+id/swipRImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/swipe_r"></ImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/help_swipeR"
            android:textColor="@color/orange"
            android:textAlignment="center"
            android:textSize="15dp"></TextView>


    </LinearLayout>

</RelativeLayout>